add more auth functions + more components

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@
 DATABASE_URL="postgresql://user:pass@db"
 
 AUTH_SECRET="secret"
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
