--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^5.2.1",
     "recharts": "^2.12.7",
     "resend": "^3.2.0",
+    "sweetalert2": "^11.12.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
